src/main/java/org/example/mobble/_util/error/ex/ExceptionApi403.java
package org.example.mobble._util.error.ex;

public class ExceptionApi403 extends RuntimeException {
    public ExceptionApi403(String message) {
        super(message);
    }
}
